# bsuir-iitp-20-24

./: README.md
1 course/1 term/FAaP/LR-4/: LR-4-1-D.cpp  LR-4-1-I.cpp  LR-4-2-D.cpp  LR-4-2-I.cpp  LR-4-3-1-I.cpp
1 course/1 term/FAaP/LR-5/: LR-5-1-D.cpp  LR-5-1-DD.cpp  LR-5-3-DD.cpp
1 course/1 term/FAaP/LR-6/: LR-6-1-D.cpp  LR-6-1-I.cpp  LR-6-2-I.cpp  LR-6-3-D.cpp  LR-6-3-I.cpp
1 course/1 term/FAaP/LR-7/: LR-7-1-D.cpp  LR-7-1-I.cpp  LR-7-2-I.cpp  LR-7-3-D.cpp  LR-7-3-I.cpp  LR-7-4-I.cpp
1 course/1 term/FAaP/LR-8/: LR-8-1.cpp  LR-8-2.cpp
1 course/2 term/FAaP/LR-2/: List.h  MaleFemale.cpp  MaleFemale.h  Questionnarie.cpp  Questionnarie.h  Result.cpp  Result.h
1 course/2 term/FAaP/LR-3/: AdminWind.cpp  AdminWind.h  IncorrectTime.cpp  IncorrectTime.h  List.h  (+8 more)
3 course/5 term/CSA/LR 1/: CMakeLists.txt  asmHelper.asm  main.c
3 course/5 term/SP/LR-4/: CMakeLists.txt  main.cpp  mono_encr.hpp  multithread_encr.hpp
3 course/5 term/SP/LR-6/: CMakeLists.txt  main.c
3 course/6 term/MTran/asmLangAnalyzer/: .gitignore  CMakeLists.txt  test.asm  test_2_2.asm
3 course/6 term/MTran/asmLangAnalyzer/src/: main.cpp
3 course/6 term/MTran/asmLangAnalyzer/src/models/: syntaxTreeNode.cpp  syntaxTreeNode.h  token.cpp  token.h
3 course/6 term/MTran/asmLangAnalyzer/src/services/: lexAnalizeService.cpp  lexAnalizeService.h  semanticAnalizeService.cpp  semanticAnalizeService.h  syntaxTreeService.cpp  syntaxTreeService.h  tableCreateService.cpp  tableCreateService.h
3 course/6 term/MTran/asmLangAnalyzer/src/supportingFiles/: lexicalBase.cpp  lexicalBase.h  semanticBase.cpp  semanticBase.h  syntaxBase.cpp  syntaxBase.h  tokenType.h
3 course/6 term/OaCT/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb
3 course/6 term/SAaOP/: .gitignore  lr_1.ipynb  lr_2.ipynb  lr_3.ipynb  lr_4.ipynb  lr_5.ipynb
(+1305 files in other folders)
